<resources>
    <string name="default_web_client_id">274566840922-qiv58dt94m2ohrh6asinr5mir2tjmrp2.apps.googleusercontent.com</string>
    <string name="app_name">FarmSmart</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back !!</string>
    <string name="to_keep_connected_with_app_please_login_with_your_personal_info">To keep connected with app please login with your personal Info</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="already_register_sign_in">Already Register? Sign in</string>
    <string name="not_register_sign_up">Not Register? Sign Up</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="purchase">Purchase</string>
    <string name="book_vehcile">Book Vehicle</string>
    <string name="read_articles">Read Articles</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="articles">Articles</string>
    <string name="crops">Crops</string>
    <string name="fruits">Fruits</string>
    <string name="flowers">Flowers</string>
    <string name="how_to_expand">How To Expand</string>
    <string name="diseases">Diseases</string>
    <string name="vehicle">Vehicle</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="options">Options</string>
    <string name="buy_now">Buy Now</string>
    <string name="call">Call</string>
    <string name="location">Location</string>
    <string name="low_to_high">Low To High</string>
    <string name="high_to_low">High To Low</string>
    <string name="alibag" translatable="false">Alibag</string>
    <string name="panvel" translatable="false">Panvel</string>
    <string name="murud" translatable="false">Murud</string>
    <string name="pen" translatable="false">Pen</string>
    <string name="uran" translatable="false">Uran</string>
    <string name="karjat" translatable="false">Karjat</string>
    <string name="mangaon" translatable="false">Mangaon</string>
    <string name="roha" translatable="false">Roha</string>
    <string name="shrivardhan" translatable="false">Shrivardhan</string>
    <string name="poladpur" translatable="false">Poladpur</string>
    <string name="raigad" translatable="false">Raigad</string>
    <string name="pune" translatable="false">Pune</string>
    <string name="aundh" translatable="false">Aundh</string>
    <string name="bavdhan" translatable="false">Bavdhan</string>
    <string name="balewadi" translatable="false">Balewadi</string>
    <string name="dhankawadi" translatable="false">Dhankawadi</string>
    <string name="dhanori" translatable="false">Dhanori</string>
    <string name="hadapsar" translatable="false">Hadapsar</string>
    <string name="katraj" translatable="false">Katraj</string>
    <string name="kharadi" translatable="false">Kharadi</string>
    <string name="kothrud" translatable="false">Kothrud</string>
    <string name="chinchwad" translatable="false">Chinchwad</string>
    <string name="swargate" translatable="false">Swargate</string>
    <string name="ratnagiri" translatable="false">Ratnagiri</string>
    <string name="dapoli" translatable="false">Dapoli</string>
    <string name="mandangad" translatable="false">Mandangad</string>
    <string name="khed" translatable="false">Khed</string>
    <string name="chiplun" translatable="false">Chiplun</string>
    <string name="guhagar" translatable="false">Guhagar</string>
    <string name="sangameshwar" translatable="false">Sangameshwar</string>
    <string name="lanja" translatable="false">Lanja</string>
    <string name="rajapur" translatable="false">Rajapur</string>
    <string name="parbhani" translatable="false">Parbhani</string>
    <string name="sangli" translatable="false">Sangli</string>
    <string name="satara" translatable="false">Satara</string>
    <string name="sindhudurg" translatable="false">Sindhudurg</string>
    <string name="thane" translatable="false">Thane</string>
    <string name="looks_like_admin_haven_t_added_any_item_yet">Looks like Admin haven\'t added any item yet.</string>
    <string name="insect_and_control">Insect and Control</string>
    <string name="log_out">Log out</string>
    <string name="language">Language</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="contact_us">Contact US</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="popupmenu">PopUpMenu</string>
    <string name="look_s_like_you_haven_t_add_anything_to_task_list">Look\'s like you haven\'t add anything to Task list</string>
    <string name="create_new_routine">Create New Routine</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="priority">Priority</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
</resources>