<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TaskAdd">

    <RelativeLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutIcons"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRoutinesCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/create_new_routine"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRoutinesCreate"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="9dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/date"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRoutinesCreate"
            android:layout_margin="9dp"
            android:layout_toEndOf="@id/tvDate"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/time"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRoutinesCreate"
            android:layout_margin="9dp"
            android:layout_toEndOf="@id/tvTime"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/priority"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etRoutine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/title"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etDecs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRoutine"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="9dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/description"
            android:minHeight="100dp"
            android:padding="15dp"
            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layoutIcons"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/ivSelectDate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="9dp"
            android:padding="9dp"
            android:src="@drawable/baseline_calendar_month_24" />

        <ImageView
            android:id="@+id/ivSelectTime"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@id/ivSelectDate"
            android:padding="9dp"
            android:src="@drawable/baseline_access_time_filled_24" />

        <ImageView
            android:id="@+id/ivPriority"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@id/ivSelectTime"
            android:padding="9dp"
            android:src="@drawable/baseline_flag_24" />

        <Button
            android:id="@+id/btnTaskDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/green"
            android:text="@string/done" />

    </RelativeLayout>


</RelativeLayout>