<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Authentication.SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="297dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signupCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signupCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="80dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.145"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                app:hintTextColor="@color/green"
                android:textColor="@color/black"
                app:boxStrokeColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textView2"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone"
                android:textColor="@color/black"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_address"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress|textAutoComplete"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="9"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/alreadyRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/already_register_sign_in"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/green"
                android:text="@string/sign_up"
                android:textSize="17sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <View
                android:id="@+id/view2"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_continue_with"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/signup_btn"
                app:layout_constraintStart_toStartOf="@+id/signup_btn"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <View
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn"
                app:layout_constraintVertical_bias="0.208" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/googlesignin_btn"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="12dp"
                app:icon="@drawable/googlee"
                app:iconSize="30dp"
                app:iconTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.187" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>